# fishtest

./: .pre-commit-config.yaml  LRU_CACHE.md  OAuth2.md  SPSA.md  TYPING.md  pyproject.toml
WIP/: ARCHITECTURE.md  FASTAPI.md
docs/: 0-README.md  1-architecture.md  2-threading-model.md  3-api-reference.md  4-ui-reference.md  5-templates.md  6-worker.md  (+3 more)
server/: development.ini  production.ini  pyproject.toml  requirements.txt  setup.py
server/fishtest/: __init__.py  _types.py  actiondb.py  api.py  app.py  cookie_session.py  csrf.py  dependencies.py  dev_util.py  errors.py  github_api.py  kvstore.py  lru_cache.py  mako.py  middleware.py  models.py  oauth.py  router.py  routes.py  run_cache.py  run_form.py  rundb.py  scheduler.py  schemas.py  search_actions.py  search_contract.py  search_finished.py  settings.py  spsa_handler.py  spsa_workflow.py  template_request.py  typesense_actions.py  typesense_client.py  typesense_finished.py  typesense_runtime.py  userdb.py  util.py  versions.py  views.py  views_actions.py  (+3 more)
server/fishtest/api/: __init__.py  public.py  worker.py
server/fishtest/glue/: __init__.py  api.py  cookie_session.py  csrf.py  dependencies.py  errors.py  mako.py  middleware.py  settings.py  template_request.py  ui_context.py  ui_pipeline.py  views.py
server/fishtest/http/: api.py  boundary.py  cookie_session.py  csrf.py  dependencies.py  errors.py  jinja.py  jinja_tmp.py  live_elo_preview.py  mako.py  mako_new.py  middleware.py  open_graph.py  session_middleware.py  settings.py  template_helpers.py  template_renderer.py  template_request.py  ui_context.py  ui_errors.py  ui_pipeline.py  views.py
server/fishtest/static/js/: application.js  spsa.js
server/fishtest/stats/: LLRcalc.py  brownian.py  sprt.py  stat_util.py
server/fishtest/templates/: actions.html.j2  base.html.j2  elo_results.html.j2  login.mak  machines.html.j2  run_table.html.j2  run_tables.html.j2  tests.html.j2  tests_filter_tabs_fragment.html.j2  tests_live_elo.html.j2  tests_run.html.j2  tests_run.mak  tests_user.html.j2  tests_view.html.j2  tests_view.mak  tests_view_details_section.html.j2  typesense_status.html.j2  typesense_status_content_fragment.html.j2  user.mak
server/fishtest/templates_jinja2/: actions.html.j2  actions.mak  base.html.j2  base.mak  contributors.html.j2  contributors.mak  elo_results.html.j2  elo_results.mak  login.html.j2  login.mak  machines.html.j2  machines.mak  nn_upload.html.j2  nn_upload.mak  nns.html.j2  nns.mak  notfound.html.j2  notfound.mak  pagination.mak  rate_limits.html.j2  rate_limits.mak  run_table.html.j2  run_table.mak  run_tables.mak  signup.html.j2  signup.mak  sprt_calc.mak  tasks.html.j2  tasks.mak  tests.html.j2  tests.mak  tests_finished.html.j2  tests_finished.mak  tests_live_elo.html.j2  tests_live_elo.mak  tests_run.html.j2  tests_run.mak  tests_stats.html.j2  tests_stats.mak  tests_user.html.j2  (+9 more)
server/fishtest/templates_jinja2_tmp/: base.mak  pagination.mak  run_tables.mak  tests_stats.mak  tests_view.mak
server/fishtest/templates_mako/: base.mak  elo_results.mak  machines.mak  run_table.mak  tasks.mak  tests_run.mak  tests_stats.mak  tests_view.mak
server/fishtest/views/: __init__.py  actions.py  auth.py  common.py  contributors.py  nns.py  rate_limits.py  sprt_calc.py  tests.py  tests_manage.py  tests_view.py  user.py  user_management.py  workers.py
server/tests/: fastapi_util.py  test_actions_view.py  test_actions_view_fastapi.py  test_api.py  test_api_fastapi.py  test_app.py  test_github_api.py  test_glue_errors_fastapi.py  test_glue_helpers.py  test_http_actions_view.py  test_http_api.py  test_http_app.py  test_http_boundary.py  test_http_errors.py  test_http_helpers.py  test_http_middleware.py  test_http_open_graph.py  test_http_settings.py  test_http_ui_session_semantics.py  test_http_users.py  test_kvstore.py  test_lru_cache.py  test_nn.py  test_oauth_users.py  test_rundb.py  test_search_contract.py  test_spsa_handler.py  test_spsa_param_history_tool.py  test_spsa_workflow.py  test_support.py  test_typesense_actions.py  test_typesense_finished.py  test_ui_session_semantics_fastapi.py  test_userdb_api_key.py  test_users.py  test_users_fastapi.py  test_views_actions.py  test_views_admin.py  test_views_detail.py  test_views_finished.py  (+3 more)
server/tests/pyramid/: __init__.py  httpexceptions.py  response.py  security.py  testing.py  view.py
server/utils/: backfill_api_keys.py  clone_fish.py  create_indexes.py  delta_update_users.py  nginx_cidr_builder.py  test_queries.py  upgrade.py
server/utils/spsa/: _spsa_param_history_tool.py  spsa_apply_stage.py  spsa_backup_runs.py  spsa_list_constant_history.py  spsa_param_history_c_to_iter.py  spsa_param_history_drop_r.py  spsa_param_history_find_dense.py  spsa_param_history_resample.py  spsa_param_history_tool.py  spsa_stage_new.py  spsa_stage_orig.py  spsa_top_run_docs.py  spsa_top_spsa_docs.py
(+112 files in other folders)
