[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.1"
dependencies = [
    "awscli>=1.37.10",
    "email-validator>=2.2.0",
    "fastapi>=0.115.8",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.5",
    "numpy>=2.2.2",
    "orjson>=3.10.15",
    "pydantic>=2.10.6",
    "pymongo>=4.11",
    "pyramid>=2.0.2",
    "pyramid-debugtoolbar>=4.12.1",
    "pyramid-mako>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "scipy>=1.15.1",
    "uvicorn[standard]>=0.34.0",
    "vtjson>=2.2.4",
    "waitress>=3.0.2",
    "zxcvbn>=4.4.28",
]
