[project]
name = "fishtest-server"
version = "0.1.0"
description = "fishtest-server"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Development Status :: Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Linux",
    "Environment :: Web Environment",
    "Framework :: MongoDB",
    "Framework :: Mako",
    "Framework :: Numpy",
    "Framework :: Scipy",
    "Topic :: Computer Chess Development",
    "Topic :: Computer Chess Development :: Statistical Testing Framework",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Application Frameworks",
]
dependencies = [
    "awscli>=1.44.34",
    "email-validator>=2.3.0",
    "fastapi>=0.128.3",
    "jinja2>=3.1.6",
    "mako>=1.3.10",
    "numpy>=2.4.2",
    "pymongo>=4.16.0",
    "python-multipart>=0.0.22",
    "regex>=2026.1.15",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "uvicorn>=0.40.0",
    "vtjson>=2.2.8",
    "zxcvbn>=4.5.0",
]

[dependency-groups]
test = [
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://tests.stockfishchess.org"
Documentation = "https://github.com/official-stockfish/fishtest/wiki"
Repository = "https://github.com/official-stockfish/fishtest"
Issues = "https://github.com/official-stockfish/fishtest"

[build-system]
requires = ["setuptools>=81"]
build-backend = "setuptools.build_meta"

[tool.setuptools.data-files]
"." = [
    "*.cfg",
    "*.ini",
    "*.rst",
    "*.txt",
]

[tool.setuptools.package-data]
fishtest = [
    "*.css",
    "*.gif",
    "*.html",
    "*.ico",
    "*.js",
    "*.jpg",
    "*.mak",
    "*.mako",
    "*.mem",
    "*.png",
    "*.webp",
    "*.pt",
    "*.txt",
    "*.xml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fishtest", "fishtest.*"]
exclude = ["tests", "tests.*"]
